# stn-py-job-manager

./: README.md  pyproject.toml
examples/: minha_carga_example.py
scripts/: carga_funcoes.py
stn_job_manager/: __init__.py
