[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stn-job-manager"
version = "0.1.0"
description = "Gerenciador de jobs para execução de cargas SIORG em background"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0"
]

[project.urls]
"Homepage" = "https://github.com/tesouro/stn-job-manager"